--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,7 @@
 
-Some bug regarding packages showing version number -1 when they shouldn't and app names missing
 Check for usability after display orientation change (rotate) especially on the log view screen
 General bug hunting / fixing
 App Icon and upload to play store
 Prettier log presentation (raw log right now)
-Server confirmation (last upload time)
-File Upload when network connection not available
-
+Server activity that gives info about the server such as the last upload time and how much data the user has shared.
+Zhuofan mentioned some bug about the newest (newest newest) version of android
